--- a/iuiga-common/pom.xml
+++ b/iuiga-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-common</artifactId>
+    <artifactId>iuiga-common</artifactId>
 
     <description>
         common通用工具
@@ -135,6 +135,11 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.3</version>
         </dependency>
 
     </dependencies>
