--- a/iuiga-framework/pom.xml
+++ b/iuiga-framework/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-framework</artifactId>
+    <artifactId>iuiga-framework</artifactId>
 
     <description>
         framework框架核心
@@ -56,7 +56,7 @@
         <!-- 系统模块-->
         <dependency>
             <groupId>com.iuiga</groupId>
-            <artifactId>demo-system</artifactId>
+            <artifactId>iuiga-system</artifactId>
         </dependency>
 
     </dependencies>
