--- a/iuiga-system/pom.xml
+++ b/iuiga-system/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-system</artifactId>
+    <artifactId>iuiga-system</artifactId>
 
     <description>
         system系统模块
@@ -20,7 +20,7 @@
         <!-- 通用工具-->
         <dependency>
             <groupId>com.iuiga</groupId>
-            <artifactId>demo-common</artifactId>
+            <artifactId>iuiga-common</artifactId>
         </dependency>
 
     </dependencies>
