视频管理和视频日志添加

--- a/iuiga-framework/pom.xml
+++ b/iuiga-framework/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>iuiga-qa</artifactId>
         </dependency>
 
+        <!-- 视频模块-->
+        <dependency>
+            <groupId>com.iuiga</groupId>
+            <artifactId>iuiga-vms</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
